--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -348,14 +348,23 @@ nav.admin-menu {
   padding-top: 2em;
   font-size: 20px;
   text-align: center;
+
+  span {
+    margin: 0px 20px !important;
+  }
+
+  a {
+    margin: 0px 20px !important;
+  }
 }
 
 footer.global {
-  margin: 0 1em;
   color: $blue;
+  background: #D5D9DB;
   font-weight: 700;
   text-transform: uppercase;
-  padding-bottom: 2em;
+  padding-top: 1em;
+  padding-bottom: 0.5em;
 
   p {
     font-size: 11px;
