--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -34,10 +34,17 @@
   }
 }
 
+.post-fix {
+    @media only screen and (min-width: 1440px) {
+      display: none !important;
+    }
+  }
+
 .posts-container {
   @media (max-width: 40em) {
     width: 100%
   }
+
 
   .sharing {
     padding-left: 1em;
@@ -55,18 +62,38 @@
   }
 }
 
+.clearfix {
+  display: block;
+  clear:both;
+}
 .post-container {
-  padding-top: 30px;
+  padding: 30px 30px 0;
+  clear: both;
   border-bottom: 1px $off-white solid;
 
+  .post-div {
+    @media only screen and (min-width: 1440px) {
+      width:300px;
+    }
+  }
+
   img {
-    width: 100%;
+    display: block;
+    margin:auto;
+    margin-bottom: 15px;
   }
 
   h1 {
+    margin-bottom: 5px;
     @media only screen and (max-width: 767px) {
       text-align: center;
     }
+  }
+
+  .datestamp {
+    color: gray;
+    font-size: 12px;
+    margin-bottom: 5px;
   }
 }
 
@@ -77,10 +104,16 @@
 .post-image-show {
   padding: 0, 1em;
 
+
+  .datestamp {
+    color: gray;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+
   img {
-    float: left;
-    width: 50%;
-    padding: 0 1em 0 0;
+    width: 100%;
+    border-radius: 3px;
     @media only screen and (max-width: 767px) {
       width: 100%;
     }
@@ -116,6 +149,7 @@
 
 .post-title {
   font-size: 20px;
+  margin-bottom: 5px !important;
 }
 
 .post-form-excerpt {
@@ -124,4 +158,10 @@
 
 .post-actions {
   margin: 1em;
+}
+
+.post-header-image {
+  width: 300px;
+  height: 200px;
+  border-radius: 5px;
 }
