--- a/app/views/posts/_admin_actions.html.erb
+++ b/app/views/posts/_admin_actions.html.erb
@@ -1,6 +1,6 @@
 <% if superadmin_signed_in? || (current_admin && post.admin_id === current_admin.try(:id)) %>
-  <div class="post-actions">
-    <%= link_to 'Edit Post', edit_post_path(post) %>
-    <%= link_to 'Delete Post', post_path(post), method: :delete, confirm: "Are you sure?" %>
+  <div class="" style="margin-bottom: 15px;">
+    <%= link_to 'Edit Post', edit_post_path(post), class: 'button small' %>
+    <%= link_to 'Delete Post', post_path(post), method: :delete, confirm: "Are you sure?", class: 'button small alert' %>
   </div>
 <% end %>
