--- a/app/views/shared/_admin_menu.haml
+++ b/app/views/shared/_admin_menu.haml
@@ -1,16 +1,15 @@
-.row
-  %nav.admin-menu.twelve.columns
-    - if superadmin_signed_in?
-      .current-school
-        = current_school.name
-        = link_to 'Change', edit_current_school_path, class: 'button'
+%nav.admin-menu.twelve.columns.hide-for-small
+  - if superadmin_signed_in?
+    .current-school
+      = current_school.name
+      = link_to 'Change', edit_current_school_path, class: 'button'
 
-    %ul
-      %li= link_to 'Add Box Score', new_game_path, class: 'button'
+  %ul
+    %li= link_to 'Add Box Score', new_game_path, class: 'button'
 
-      - if current_school && current_school.unpublished_games.any?
-        %li= link_to 'Drafts', drafts_games_path, class: 'button'
+    - if current_school && current_school.unpublished_games.any?
+      %li= link_to 'Drafts', drafts_games_path, class: 'button'
 
-      - if current_school
-        %li= link_to 'My School Profile', school_path(current_school), class: 'secondary button'
-      %li= link_to 'My Teams', teams_path, class: 'secondary button'
+    - if current_school
+      %li= link_to 'My School Profile', school_path(current_school), class: 'secondary button'
+    %li= link_to 'My Teams', teams_path, class: 'secondary button'
