few small improvements.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
 <meta name="twitter:description" content="<%= @post.excerpt %>">
 <meta name="twitter:image" content="<%= @post.header_image.url %>">
 
-<div id="main" class="columns">
+<div class="mobile-twelve nine columns centered">
   <div class="posts-container">
     <div class="row post-header">
       <div class="post-image-show">
