--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -66,6 +66,8 @@
               %li
                 = link_to 'SuperAdmin Dashboard', '/admin'
             - if admin_signed_in?
+              %li 
+                = link_to "New Post", new_post_path
               %li
                 = link_to 'Account', edit_account_path, class: 'edit-account'
               %li
