--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 
   <div class="three columns hide-for-mobile hide-for-small hide-for-medium">
-    <div class='post-div'>
+    <div class='post-div' style='margin:auto;'>
       <% if post.header_image.exists? %>
           <%= link_to image_tag(post.header_image.url, class: 'post-header-image'), post_path(post) %>
         <% end %>
