--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -393,3 +393,15 @@ footer.global {
     }
   }
 }
+
+.small-only {
+  display: none;
+  @media only screen and (max-width: 760px) {
+    display: block;
+  }
+}
+
+.no-style {
+  list-style: none;
+  margin-bottom: 0;
+}
