--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -68,11 +68,22 @@
 .post-container {
   padding: 30px 30px 0;
   clear: both;
-  border-bottom: 1px $off-white solid;
+
+  @media only screen and (min-width: 760px) {
+    border-bottom: 1px $off-white solid;
+  }
 
   .post-div {
     @media only screen and (min-width: 1440px) {
       width:300px;
+    }
+
+    hr {
+      display:none;
+      @media only screen and (max-width: 760px) {
+        display: block;
+        border-bottom: 1px solid #969898;
+      }
     }
   }
 
