--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,7 +52,7 @@
             %li
               = link_to 'Posts', posts_path
             %li
-              = link_to 'Games', games_path
+              = link_to 'Box Scores', games_path
             %li
               = link_to 'About Us', '/about-us'
             %li
