--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -166,6 +166,9 @@
 .post-title {
   font-size: 20px;
   margin-bottom: 5px !important;
+  @media (min-width: 40em) {
+    font-size:30px;
+  }
 }
 
 .post-form-excerpt {
